<resources>

        <string name="app_name">Shopping Cart</string>
        <string name="title_activity_main">Main Activity</string>
        <string name="menu_main_delete">Delete All</string>
        <string name="menu_main_send">Send to Pay</string>
        <string name="menu_main_buy">BUY</string>
        <string name="menu_main_product">Product: </string>
        <string name="menu_main_amount">Amount: </string>
        <string name="payment_confirmation_title">Payment Confirmation</string>
        <string name="payment_confirmation_message">Are you sure you want to send the cart to pay?</string>
        <string name="payment_confirmation_button">Accept</string>
        <string name="payment_deny_button">Cancel</string>
        <string name="toast_products_sent">Products sent to pay</string>
        <string name="radio_english">English</string>
        <string name="radio_spanish">Spanish</string>
        <string name="menu_contextual_delete">Delete</string>

</resources>